--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,22 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/socialite": "^4.3",
+        "laravel/tinker": "^2.0",
+        "laravelcollective/html": "^6.1",
+        "reliese/laravel": "^0.0.14"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/ui": "~2.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
